refacto (a bit) docker confs

--- a/directus/.env
+++ b/directus/.env
@@ -10,7 +10,9 @@ CORS_ORIGIN=true
 ## Database
 
 DB_CLIENT="sqlite3"
-DB_FILENAME="./data.db"
+DB_FILENAME="chat.db"
+#DB_FILENAME="promethee.db"
+#DB_FILENAME="elb.db"
 
 ####################################################################################################
 ## Rate Limiting
@@ -30,7 +32,7 @@ CACHE_ENABLED=false
 
 STORAGE_LOCATIONS="local"
 STORAGE_LOCAL_DRIVER="local"
-STORAGE_LOCAL_ROOT="./uploads"
+STORAGE_LOCAL_ROOT="/directus/uploads"
 
 ####################################################################################################
 ## Security
@@ -48,6 +50,10 @@ CORS_ENABLED=true
 CORS_ORIGIN=true
 
 ####################################################################################################
+## user
+ADMIN_EMAIL="admin@example.com"
+ADMIN_PASSWORD="d1r3ctu5"
+####################################################################################################
 ## Auth Providers
 
 AUTH_PROVIDERS=""
@@ -55,7 +61,7 @@ AUTH_PROVIDERS=""
 ####################################################################################################
 ## Extensions
 
-EXTENSIONS_PATH="./extensions"
+EXTENSIONS_PATH="/directus/extensions"
 
 ####################################################################################################
 ## Email
