--- a/angular/.dockerignore
+++ b/angular/.dockerignore
@@ -1,2 +1,13 @@
-./node_modules
-./src
+# Logs
+logs
+*.log
+
+#source & resources
+src
+*.md
+.angular
+.cache
+.git
+*Dockerfile*
+*docker-compose*
+node_modules
